--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>calculator</artifactId>
 	<packaging>war</packaging>
 	
-<version>2.0.1-RELEASE</version>
+<version>2.0.1-SNAPSHOT</version>
 	<name>Calculator_WebApp</name>
 	<url>http://cal.ms.com</url>
 	
